Fix label column text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -8668,7 +8668,7 @@ details[open] .footer-arrow-icon {
 }
 
 .industry-intro-label-col {
-  padding-top: 10px;
+  padding-top: 0;
 }
 
 .industry-intro-content {
